[gd_scene load_steps=2 format=3 uid="uid://ctrx77k5b168v"]

[ext_resource type="Script" path="res://UI/gongxutable/gongxu_item.gd" id="1_6ecx7"]

[node name="gongxuItem" type="HBoxContainer"]
script = ExtResource("1_6ecx7")

[node name="number" type="Label" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="name" type="Label" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "工艺1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="time" type="Label" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "工时定额"
horizontal_alignment = 1
vertical_alignment = 1

[node name="content" type="Label" parent="."]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "工艺内容工艺内容工艺内容工艺内容工艺内容工艺内容工艺内容工艺内容工艺内容工艺内容工艺内容工艺内容工艺内容"
autowrap_mode = 2

[node name="demand" type="Label" parent="."]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
text = "工艺内容工艺内容工艺内容工艺内容工艺内容工艺内容工艺内容工艺内容工艺内容工艺内容工艺内容工艺内容"
autowrap_mode = 2

[node name="Control" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="delete" type="Button" parent="Control"]
layout_mode = 2
text = "删除"

[node name="edit" type="Button" parent="Control"]
layout_mode = 2
text = "编辑"

[node name="EditGongxuDialog" type="AcceptDialog" parent="."]
initial_position = 2
title = "编辑工艺"
size = Vector2i(300, 123)

[node name="VBoxContainer" type="VBoxContainer" parent="EditGongxuDialog"]
custom_minimum_size = Vector2(0, 50)
anchors_preset = 10
anchor_right = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = 144.0
grow_horizontal = 2

[node name="Name" type="HBoxContainer" parent="EditGongxuDialog/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Name" type="Label" parent="EditGongxuDialog/VBoxContainer/Name"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "工序名称:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NameEdit" type="LineEdit" parent="EditGongxuDialog/VBoxContainer/Name"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "请输入名称"

[node name="Content" type="HBoxContainer" parent="EditGongxuDialog/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Content" type="Label" parent="EditGongxuDialog/VBoxContainer/Content"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "工序内容:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ContentEdit" type="LineEdit" parent="EditGongxuDialog/VBoxContainer/Content"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "请输入"

[node name="Demand" type="HBoxContainer" parent="EditGongxuDialog/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Demand" type="Label" parent="EditGongxuDialog/VBoxContainer/Demand"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "技术要求:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DemandEdit" type="LineEdit" parent="EditGongxuDialog/VBoxContainer/Demand"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "请输入"

[node name="Time" type="HBoxContainer" parent="EditGongxuDialog/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Time" type="Label" parent="EditGongxuDialog/VBoxContainer/Time"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "工时定额:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimeEdit" type="LineEdit" parent="EditGongxuDialog/VBoxContainer/Time"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "请输入"

[connection signal="pressed" from="Control/delete" to="." method="_on_delete_pressed"]
[connection signal="pressed" from="Control/edit" to="." method="_on_edit_pressed"]
[connection signal="confirmed" from="EditGongxuDialog" to="." method="_on_edit_gongxu_dialog_confirmed"]
